syntax = "proto3";

option java_package = "com.aurora";

import "market.proto";

message AuroraRequest{
  oneof requests{
    BuyGoodRequest buyGoodRequest = 1;
    SellGoodRequest sellGoodRequest = 2;
  }
}
message AuroraResponse{

  oneof responses{
    TradeActionProductRequest tradeActionProductRequest = 1;
  }

}

message AuroraSubscribeRequest{
  oneof subscribeRequests{
    MarketDataRequest marketDataRequest = 1;
    }
}

message AuroraSubscribeResponse{

  oneof subscribeResponse{
    TickResponse ticketResponse = 1;
    }

}

service AuroraService{

  rpc subscribe (AuroraSubscribeRequest) returns (stream AuroraSubscribeResponse);
  rpc request (AuroraRequest) returns (AuroraResponse);

}