syntax = "proto3";

package market;

option java_package = "com.market";
option java_multiple_files = true;

message MarketDataRequest{
  string clientId = 1;
  string goodName = 2;
}

enum Origin{
  UNSPECIFIED = 0;
  AMERICA = 1;
  ASIA = 2;
  EUROPE = 3;
}

message TickResponse{
  string goodName = 1;
  uint64 quantity = 2;
  double price = 3;
  int64 timestamp = 4;
  Origin origin = 5;
}

message CatalogueRequest{
  string clientId = 1;
}

message CatalogueResponse{
  repeated string foodItems = 1;
}

service MarketService{
  rpc subscribeForItem(stream MarketDataRequest) returns (stream TickResponse);
  rpc requestCatalogue(CatalogueRequest) returns (CatalogueResponse);
}
