syntax = "proto3";

package orderbook;

import "market.proto";

option java_package = "com.orderbook";
option java_multiple_files = true;

message ItemOrderBookRequest {
  string item_name = 1;
  string client_id = 2;
  int64 quantity = 3;
}

message ItemOrderBookResponse {
  string item_name = 1;
  repeated OrderBookLayer orderbook_layers = 2;
}

message OrderBookLayer {
  double price = 1;
  int64 quantity = 2;
  market.Origin origin = 3;
}

message InterestsRequest {
  string item_name = 1;
  string client_id = 2;
}

message InterestsResponse {
}

message CancelSubscriptionRequest {
  string item_name = 1;
  string client_id = 2;
}

message CancelSubscriptionResponse {
}

service OrderBookService {
  rpc getOrderBookItemLayers(ItemOrderBookRequest) returns (ItemOrderBookResponse);
  rpc announceItemInterest(InterestsRequest) returns (InterestsResponse);
  rpc cancelItemSubscription(CancelSubscriptionRequest) returns (CancelSubscriptionResponse);
}